test/interaction/Issue1523.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals*" "?0 : (j₁ : Size< i) → A j₁ → U j₁" nil)
((last . 1) . (agda2-goals-action '(0)))
(agda2-give-action 0 'paren)
(agda2-status-action "")
(agda2-info-action "*All Errors*" "Issue1523.agda:14.31-57: error: [TerminationIssue] Termination checking failed for the following function: fixU Problematic call: (fixU j f) (at Issue1523.agda:14.49-53) when checking that the expression λ (j₁ : Size< i) → fixU j₁ f has type (j₁ : Size< i) → A j₁ → U j₁" nil)
((last . 1) . (agda2-goals-action '()))
